# workshop_uv

./: .gitignore  LICENSE  README.md  pyproject.toml
Data Management Basics/: 01_get_data_pandas.py  02_get_data_regex.py  03_get_data_regex_short.py  04_get_and_plt_via_module.py  05_information_vs_characteristics.py  Polysorbate.xlsx
Data Management Basics/raw_from_machine/: Polysorbate20.csv  Polysorbate40 - MESSED WITH.csv  Polysorbate40.csv  Polysorbate60.csv  Polysorbate80.csv  Polysorbate85.csv
Data Management Basics/surface_tension_tools/: parsers.py
data/calo/: JAA_CAL714.csv  JAA_CAL715.csv  JAA_CAL716.csv  JAA_CAL717.csv  JAA_CAL718.csv  JAA_CAL719.csv  JAA_CAL720.csv  JAA_CAL721.csv  JAA_CAL722.csv
data/metadata_calo/: metadata.csv
notebooks/: 0_start.ipynb  1_pandas_demo.ipynb  1_pandas_demo_blank.ipynb  2_calodata.ipynb  2_calodata_blank.ipynb  3_calocem.ipynb  3_calocem_blank.ipynb
scripts/: 1_intro_dataframes.py  2_calocem_demo.py  fits.html
