[project]
name = "workshop-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "altair-viewer>=0.4.0",
    "calocem>=0.1.24",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "spyder-kernels>=3.0.5",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
]
